# cmake-vscode-test-setup

./: CMakeLists.txt  README.md  main.cpp
include/: helloworld.h
src/: CMakeLists.txt  helloworld.cpp
